--- a/index.html
+++ b/index.html
@@ -54,7 +54,27 @@
               </nav>
 
         </header>
-        <main></main>
+        <main>
+            <div class="container-fluid">
+                <div class="row text-center d-flex justify-content-center border border-3">
+                    <div class="col-4 d-flex align-items-center border border-3">
+                        <div>
+                            <h1>Welcome To Our Gallery Site</h1>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem odio repellendus ut corporis! Facere amet molestias, dolorem reprehenderit alias voluptatibus, commodi esse aspernatur eveniet ab illum doloribus illo id quis.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-4 border border-3">
+                        <div>
+                            <img src="https://picsum.photos/id/200/400" alt="image">
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </main>
         <footer>
             <!-- place footer here -->
         </footer>
