--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-            crossorigin="anonymous"
-        />
+            crossorigin="anonymous"/>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -54,16 +53,17 @@
         </header>
         <main>
             <div class="container-fluid">
-                <div class="row text-center d-flex justify-content-center border border-3">
-                    <div class="col-4 d-flex align-items-center border border-3">
+                <div class="row text-center d-flex justify-content-center py-3">
+                    <div class="col-12 col-md-4 d-flex align-items-center">
                         <div>
                             <h1>Welcome To Our Gallery Site</h1>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem odio repellendus ut corporis! Facere amet molestias, dolorem reprehenderit alias voluptatibus, commodi esse aspernatur eveniet ab illum doloribus illo id quis.
+                            <p class="d-none d-md-block">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem odio repellendus ut corporis! Facere amet molestias,
+                                 dolorem reprehenderit alias voluptatibus, commodi esse aspernatur eveniet ab illum doloribus illo id quis.
                             </p>
                         </div>
                     </div>
-                    <div class="col-4 border border-3">
+                    <div class="col-12 col-md-4">
                         <div>
                             <img src="https://picsum.photos/id/200/400" alt="image">
                         </div>
@@ -72,10 +72,10 @@
 
             </div>
             <!-- Gallery cards -->
-             <div class="row justify-content-center text-center">
-                <div class="col-3">
+             <div class="row justify-content-center align-items-center text-center mt-5 py-3">
+                <div class="col-12 col-sm-6 col-md-4">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -83,9 +83,9 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-2">
+                <div class="col-12 col-sm-6 col-md-4">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -93,42 +93,9 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-3">
+                <div class="col-12 col-sm-6 col-md-4">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                      </div>
-                </div>
-             </div>
-
-             <div class="row justify-content-center text-center">
-                <div class="col-3">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                      </div>
-                </div>
-                <div class="col-2">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                      </div>
-                </div>
-                <div class="col-3">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -137,38 +104,70 @@
                       </div>
                 </div>
              </div>
-             <div class="row justify-content-center text-center">
-                <div class="col-3">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
+             <div class="row justify-content-center align-items-center text-center mt-5 py-3">
+              <div class="col-12 col-sm-6 col-md-4">
+                  <div class="card">
+                      <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
                       </div>
-                </div>
-                <div class="col-2">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
+                    </div>
+              </div>
+              <div class="col-12 col-sm-6 col-md-4">
+                  <div class="card">
+                      <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
                       </div>
-                </div>
-                <div class="col-3">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
+                    </div>
+              </div>
+              <div class="col-12 col-sm-6 col-md-4">
+                  <div class="card">
+                      <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
                       </div>
-                </div>
-             </div>
+                    </div>
+              </div>
+           </div>
+           <div class="row justify-content-center align-items-center text-center mt-5 py-3">
+            <div class="col-12 col-sm-6 col-md-4">
+                <div class="card">
+                    <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4">
+                <div class="card">
+                    <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4">
+                <div class="card">
+                    <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+         </div>
 
         </main>
         <footer>
