--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
              <div class="row justify-content-center align-items-center text-center mt-5 py-3">
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card">
-                        <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
+                        <img src="newoctober.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card">
-                        <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
+                        <img src="november.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card">
-                        <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
+                        <img src="decembernew.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -107,7 +107,7 @@
              <div class="row justify-content-center align-items-center text-center mt-5 py-3">
               <div class="col-12 col-sm-6 col-md-4">
                   <div class="card">
-                      <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
+                      <img src="newjanuaryyy.jpg" class="card-img-top img-fluid" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -117,7 +117,7 @@
               </div>
               <div class="col-12 col-sm-6 col-md-4">
                   <div class="card">
-                      <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
+                      <img src="february.jpg" class="card-img-top img-fluid" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -127,7 +127,7 @@
               </div>
               <div class="col-12 col-sm-6 col-md-4">
                   <div class="card">
-                      <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
+                      <img src="march.jpg" class="card-img-top img-fluid" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -139,7 +139,7 @@
            <div class="row justify-content-center align-items-center text-center mt-5 py-3">
             <div class="col-12 col-sm-6 col-md-4">
                 <div class="card">
-                    <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
+                    <img src="april.jpg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -149,7 +149,7 @@
             </div>
             <div class="col-12 col-sm-6 col-md-4">
                 <div class="card">
-                    <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
+                    <img src="may.jpg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -159,9 +159,9 @@
             </div>
             <div class="col-12 col-sm-6 col-md-4">
                 <div class="card">
-                    <img src="https://c4.wallpaperflare.com/wallpaper/823/492/849/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" class="card-img-top img-fluid" alt="...">
+                    <img src="june.jpg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">CARDS</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
