--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="card">
                         <img src="newoctober.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
+                          <h5 class="card-title">October</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                           <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
@@ -87,7 +87,7 @@
                     <div class="card">
                         <img src="november.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
+                          <h5 class="card-title">November</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                           <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
@@ -97,7 +97,7 @@
                     <div class="card">
                         <img src="decembernew.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
+                          <h5 class="card-title">December</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                           <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
@@ -109,7 +109,7 @@
                   <div class="card">
                       <img src="newjanuaryyy.jpg" class="card-img-top img-fluid" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">January</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                       </div>
@@ -119,7 +119,7 @@
                   <div class="card">
                       <img src="february.jpg" class="card-img-top img-fluid" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">February</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                       </div>
@@ -129,7 +129,7 @@
                   <div class="card">
                       <img src="march.jpg" class="card-img-top img-fluid" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">March</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                       </div>
@@ -139,9 +139,9 @@
            <div class="row justify-content-center align-items-center text-center mt-5 py-3">
             <div class="col-12 col-sm-6 col-md-4">
                 <div class="card">
-                    <img src="april.jpg" class="card-img-top img-fluid" alt="...">
+                    <img src="aprilpink.jpg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">April</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
@@ -151,7 +151,7 @@
                 <div class="card">
                     <img src="may.jpg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">May</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
@@ -159,9 +159,9 @@
             </div>
             <div class="col-12 col-sm-6 col-md-4">
                 <div class="card">
-                    <img src="june.jpg" class="card-img-top img-fluid" alt="...">
+                    <img src="juneflower.jpg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">CARDS</h5>
+                      <h5 class="card-title">June</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
