--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="col-12 col-md-4">
                         <div>
-                            <img src="https://picsum.photos/id/200/400" alt="image">
+                            <img src="withoutcrop.jpg" alt="image" class="img-fluid">
                         </div>
                     </div>
                 </div>
