--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"/>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://use.typekit.net/hhz4xxp.css">
+        <link rel="stylesheet" href="https://use.typekit.net/rpa3uvd.css">
+        <link rel="stylesheet" href="https://use.typekit.net/fmp1tvq.css">
     </head>
     <body>
         <header>
@@ -56,16 +59,13 @@
                 <div class="row text-center d-flex justify-content-center py-3">
                     <div class="col-12 col-md-4 d-flex align-items-center">
                         <div>
-                            <h1>Welcome To Our Gallery Site</h1>
-                            <p class="d-none d-md-block">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem odio repellendus ut corporis! Facere amet molestias,
-                                 dolorem reprehenderit alias voluptatibus, commodi esse aspernatur eveniet ab illum doloribus illo id quis.
-                            </p>
+                            <h1 class="estro-mn mt-5">Welcome To Our Gallery Site</h1>
+                            <p class="d-none d-md-block text-center ivystyle-tw"> Please look through my monthly websites! Enjoy!!</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4">
                         <div>
-                            <img src="withoutcrop.jpg" alt="image" class="img-fluid">
+                            <img src="croppp.png" alt="image" class="img-fluid">
                         </div>
                     </div>
                 </div>
@@ -77,8 +77,8 @@
                     <div class="card">
                         <img src="newoctober.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">October</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <h5 class="card-title joly-text">October</h5>
+                          <p class="card-text ivystyle-tw">Check out my October Website!</p>
                           <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                       </div>
@@ -87,8 +87,8 @@
                     <div class="card">
                         <img src="november.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">November</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <h5 class="card-title joly-text">November</h5>
+                          <p class="card-text ivystyle-tw">Check out my November Website!</p>
                           <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                       </div>
@@ -97,8 +97,8 @@
                     <div class="card">
                         <img src="decembernew.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">December</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <h5 class="card-title joly-text">December</h5>
+                          <p class="card-text ivystyle-tw">Check out my December Website!</p>
                           <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                       </div>
@@ -109,8 +109,8 @@
                   <div class="card">
                       <img src="newjanuaryyy.jpg" class="card-img-top img-fluid" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">January</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title joly-text">January</h5>
+                        <p class="card-text ivystyle-tw">Check out my January Website!.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                       </div>
                     </div>
@@ -119,8 +119,8 @@
                   <div class="card">
                       <img src="february.jpg" class="card-img-top img-fluid" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">February</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title joly-text">February</h5>
+                        <p class="card-text ivystyle-tw">Check out my February Website!</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                       </div>
                     </div>
@@ -129,8 +129,8 @@
                   <div class="card">
                       <img src="march.jpg" class="card-img-top img-fluid" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">March</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title joly-text">March</h5>
+                        <p class="card-text ivystyle-tw">Check out my March Website!</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                       </div>
                     </div>
@@ -141,8 +141,8 @@
                 <div class="card">
                     <img src="aprilpink.jpg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">April</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h5 class="card-title joly-text">April</h5>
+                      <p class="card-text ivystyle-tw">Check out my April Website!</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                   </div>
@@ -151,8 +151,8 @@
                 <div class="card">
                     <img src="may.jpg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">May</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h5 class="card-title joly-text">May</h5>
+                      <p class="card-text ivystyle-tw">Check out my May Website!</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                   </div>
@@ -161,8 +161,8 @@
                 <div class="card">
                     <img src="juneflower.jpg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">June</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h5 class="card-title joly-text">June</h5>
+                      <p class="card-text ivystyle-tw">Check out my June Website!</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                   </div>
