--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
         <link rel="stylesheet" href="https://use.typekit.net/hhz4xxp.css">
         <link rel="stylesheet" href="https://use.typekit.net/rpa3uvd.css">
         <link rel="stylesheet" href="https://use.typekit.net/fmp1tvq.css">
+        <link rel="stylesheet" href="https://use.typekit.net/rpa3uvd.css">
     </head>
     <body>
         <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
                     <!-- ========== Header/ intro section ========== -->
-                  <a class="navbar-brand" href="#"><img src="https://picsum.photos/50" alt="navimage"> </a>
+                  <a class="navbar-brand" href="#"><img src="school.png" alt="navimage" class="image"> </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -47,7 +48,7 @@
                             </ul>
                           </li>
                     </ul>
-                    <span class="navbar-text">
+                    <span class="navbar-text nicholas">
                       Gallery Home
                     </span>
                   </div>
@@ -59,7 +60,7 @@
                 <div class="row text-center d-flex justify-content-center py-3">
                     <div class="col-12 col-md-4 d-flex align-items-center">
                         <div>
-                            <h1 class="estro-mn mt-5">Welcome To Our Gallery Site</h1>
+                            <h1 class="estro-mn">Welcome To Our Gallery Site</h1>
                             <p class="d-none d-md-block text-center ivystyle-tw"> Please look through my monthly websites! Enjoy!!</p>
                         </div>
                     </div>
@@ -73,7 +74,7 @@
             </div>
             <!-- Gallery cards -->
              <div class="row justify-content-center align-items-center text-center mt-5 py-3">
-                <div class="col-12 col-sm-6 col-md-4">
+                <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                     <div class="card border border-white border border-5">
                         <img src="newoctober.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
@@ -83,7 +84,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4">
+                <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                     <div class="card border border-white border border-5">
                         <img src="november.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
@@ -93,7 +94,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4">
+                <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                     <div class="card border border-white border border-5">
                         <img src="decembernew.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
@@ -105,7 +106,7 @@
                 </div>
              </div>
              <div class="row justify-content-center align-items-center text-center mt-5 py-3">
-              <div class="col-12 col-sm-6 col-md-4">
+              <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                   <div class="card border border-white border border-5">
                       <img src="newjanuaryyy.jpg" class="card-img-top img-fluid" alt="...">
                       <div class="card-body">
@@ -115,7 +116,7 @@
                       </div>
                     </div>
               </div>
-              <div class="col-12 col-sm-6 col-md-4">
+              <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                   <div class="card border border-white border border-5">
                       <img src="february.jpg" class="card-img-top img-fluid" alt="...">
                       <div class="card-body">
@@ -125,7 +126,7 @@
                       </div>
                     </div>
               </div>
-              <div class="col-12 col-sm-6 col-md-4">
+              <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                   <div class="card border border-white border border-5">
                       <img src="march.jpg" class="card-img-top img-fluid" alt="...">
                       <div class="card-body">
@@ -137,7 +138,7 @@
               </div>
            </div>
            <div class="row justify-content-center align-items-center text-center mt-5 py-3">
-            <div class="col-12 col-sm-6 col-md-4">
+            <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                 <div class="card border border-white border border-5">
                     <img src="aprilpink.jpg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
@@ -147,7 +148,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4">
+            <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                 <div class="card border border-white border border-5">
                     <img src="may.jpg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
@@ -157,7 +158,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4">
+            <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                 <div class="card border border-white border border-5">
                     <img src="juneflower.jpg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
@@ -177,12 +178,17 @@
                 <footer class="py-3 my-4">
                   <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                     <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">October</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">November</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">December</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">January</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">February</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">March</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">April</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">May</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">June</a></li>
                   </ul>
-                  <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+                  <p class="text-center text-body-secondary">© Marlboro High School</p>
                 </footer>
               </div>
 
