--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <!-- place footer here -->
 
             <div class="container-fluid">
-                <footer class="py-3 my-4">
+                <footer class="footer py-3 my-4">
                   <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                     <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
                     <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">October</a></li>
