--- a/index.html
+++ b/index.html
@@ -70,37 +70,36 @@
                         </div>
                     </div>
                 </div>
-
             </div>
             <!-- Gallery cards -->
              <div class="row justify-content-center align-items-center text-center mt-5 py-3">
                 <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                     <div class="card border border-white border border-5">
-                        <img src="newoctober.jpg" class="card-img-top img-fluid" alt="...">
+                        <img src="newoctober.jpg" class="card-img-top img-fluid" alt="october">
                         <div class="card-body">
                           <h5 class="card-title joly-text">October</h5>
                           <p class="card-text ivystyle-tw">Check out my October Website!</p>
-                          <a href="#" class="btn btn-primary">My Website</a>
+                          <a href="#" class="btn btn-info text-black border-black border-5">My Website</a>
                         </div>
                       </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                     <div class="card border border-white border border-5">
-                        <img src="november.jpg" class="card-img-top img-fluid" alt="...">
+                        <img src="november.jpg" class="card-img-top img-fluid" alt="november">
                         <div class="card-body">
                           <h5 class="card-title joly-text">November</h5>
                           <p class="card-text ivystyle-tw">Check out my November Website!</p>
-                          <a href="#" class="btn btn-primary">My Website</a>
+                          <a href="#" class="btn btn-info text-black border-black border-5">My Website</a>
                         </div>
                       </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                     <div class="card border border-white border border-5">
-                        <img src="decembernew.jpg" class="card-img-top img-fluid" alt="...">
+                        <img src="decembernew.jpg" class="card-img-top img-fluid" alt="december">
                         <div class="card-body">
                           <h5 class="card-title joly-text">December</h5>
                           <p class="card-text ivystyle-tw">Check out my December Website!</p>
-                          <a href="#" class="btn btn-primary">My Website</a>
+                          <a href="#" class="btn btn-info text-black border-black border-5">My Website</a>
                         </div>
                       </div>
                 </div>
@@ -108,31 +107,31 @@
              <div class="row justify-content-center align-items-center text-center mt-5 py-3">
               <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                   <div class="card border border-white border border-5">
-                      <img src="newjanuaryyy.jpg" class="card-img-top img-fluid" alt="...">
+                      <img src="newjanuaryyy.jpg" class="card-img-top img-fluid" alt="january">
                       <div class="card-body">
                         <h5 class="card-title joly-text">January</h5>
                         <p class="card-text ivystyle-tw">Check out my January Website!.</p>
-                        <a href="#" class="btn btn-primary">My Website</a>
+                        <a href="#" class="btn btn-info text-black border-black border-5">My Website</a>
                       </div>
                     </div>
               </div>
               <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                   <div class="card border border-white border border-5">
-                      <img src="february.jpg" class="card-img-top img-fluid" alt="...">
+                      <img src="february.jpg" class="card-img-top img-fluid" alt="february">
                       <div class="card-body">
                         <h5 class="card-title joly-text">February</h5>
                         <p class="card-text ivystyle-tw">Check out my February Website!</p>
-                        <a href="#" class="btn btn-primary">My Website</a>
+                        <a href="#" class="btn btn-info text-black border-black border-5">My Website</a>
                       </div>
                     </div>
               </div>
               <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                   <div class="card border border-white border border-5">
-                      <img src="march.jpg" class="card-img-top img-fluid" alt="...">
+                      <img src="march.jpg" class="card-img-top img-fluid" alt="march">
                       <div class="card-body">
                         <h5 class="card-title joly-text">March</h5>
                         <p class="card-text ivystyle-tw">Check out my March Website!</p>
-                        <a href="#" class="btn btn-primary">My Website</a>
+                        <a href="#" class="btn btn-info text-black border-black border-5">My Website</a>
                       </div>
                     </div>
               </div>
@@ -140,36 +139,35 @@
            <div class="row justify-content-center align-items-center text-center mt-5 py-3">
             <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                 <div class="card border border-white border border-5">
-                    <img src="aprilpink.jpg" class="card-img-top img-fluid" alt="...">
+                    <img src="aprilpink.jpg" class="card-img-top img-fluid" alt="april">
                     <div class="card-body">
                       <h5 class="card-title joly-text">April</h5>
                       <p class="card-text ivystyle-tw">Check out my April Website!</p>
-                      <a href="#" class="btn btn-primary">My Website</a>
+                      <a href="#" class="btn btn-info text-black border-black border-5">My Website</a>
                     </div>
                   </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                 <div class="card border border-white border border-5">
-                    <img src="may.jpg" class="card-img-top img-fluid" alt="...">
+                    <img src="may.jpg" class="card-img-top img-fluid" alt="may">
                     <div class="card-body">
                       <h5 class="card-title joly-text">May</h5>
                       <p class="card-text ivystyle-tw">Check out my May Website!</p>
-                      <a href="#" class="btn btn-primary">My Website</a>
+                      <a href="#" class="btn btn-info text-black border-black border-5">My Website</a>
                     </div>
                   </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                 <div class="card border border-white border border-5">
-                    <img src="juneflower.jpg" class="card-img-top img-fluid" alt="...">
+                    <img src="juneflower.jpg" class="card-img-top img-fluid" alt="june">
                     <div class="card-body">
                       <h5 class="card-title joly-text">June</h5>
                       <p class="card-text ivystyle-tw">Check out my June Website!</p>
-                      <a href="#" class="btn btn-primary">My Website</a>
+                      <a href="#" class="btn btn-info text-black border-black border-5">My Website</a>
                     </div>
                   </div>
             </div>
          </div>
-
         </main>
         <footer>
             <!-- place footer here -->
@@ -178,27 +176,30 @@
                 <footer class="footer py-3 my-4">
                   <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                     <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">October</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">November</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">December</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">January</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">February</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">March</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">April</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">May</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">June</a></li>
-                  </ul>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Websites
+                      </a>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">October</a></li>
+                        <li><a class="dropdown-item" href="#">November</a></li>
+                        <li><a class="dropdown-item" href="#">December</a></li>
+                        <li><a class="dropdown-item" href="#">January</a></li>
+                        <li><a class="dropdown-item" href="#">February</a></li>
+                        <li><a class="dropdown-item" href="#">March</a></li>
+                        <li><a class="dropdown-item" href="#">April</a></li>
+                        <li><a class="dropdown-item" href="#">May</a></li>
+                        <li><a class="dropdown-item" href="#">June</a></li>
+                      </ul>
+                    </li>
+              </ul>
+              <p class="text-center text-body-secondary">526BAdler@frhsd.com</p>
+              <p class="text-center text-body-secondary">Class of 2026</p>
                   <p class="text-center text-body-secondary">© Marlboro High School</p>
                 </footer>
+                <br>
               </div>
-
-
-
-
-
-
-
-
+              <br>
         </footer>
         <!-- Bootstrap JavaScript Libraries -->
         <script
