--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                       <img src="newjanuaryyy.jpg" class="card-img-top img-fluid" alt="january">
                       <div class="card-body">
                         <h5 class="card-title joly-text">January</h5>
-                        <p class="card-text ivystyle-tw">Check out my January Website!.</p>
+                        <p class="card-text ivystyle-tw">Check out my January Website!</p>
                         <a href="#" class="btn btn-info text-black border-black border-5">My Website</a>
                       </div>
                     </div>
