--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
                </div>
                <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
                    <div class="card border border-white border border-5">
-                       <img src="november.jpg" class="card-img-top img-fluid" alt="...">
+                       <img src="nov.jpeg" class="card-img-top img-fluid" alt="...">
                        <div class="card-body">
                          <h5 class="card-title joly-text">November</h5>
                          <p class="card-text ivystyle-tw">Check out my November Website!</p>
-                         <a href="#" class="btn btn-primary">My Website</a>
+                         <a href="https://baileyadler.github.io/NovemberSite/" class="btn btn-primary">My Website</a>
                        </div>
                      </div>
                </div>
