--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
           <div class="card border border-white border border-5">
             <img
-              src="decembermonth.png"
+              src="updatedecembermoth.png"
               class="card-img-top img-fluid"
               alt="..."
             />
