changed december picture

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       >
         <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
           <div class="card border border-white border border-5">
-            <img src="clara.png" class="card-img-top img-fluid" alt="..." />
+            <img src="clara.png" class="card-img-top img-fluid" alt="october" />
             <div class="card-body">
               <h5 class="card-title joly-text">October</h5>
               <p class="card-text ivystyle-tw">Check out my October Website!</p>
@@ -108,7 +108,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
           <div class="card border border-white border border-5">
-            <img src="nov.jpeg" class="card-img-top img-fluid" alt="..." />
+            <img src="nov.jpeg" class="card-img-top img-fluid" alt="november" />
             <div class="card-body">
               <h5 class="card-title joly-text">November</h5>
               <p class="card-text ivystyle-tw">
@@ -125,9 +125,9 @@
         <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
           <div class="card border border-white border border-5">
             <img
-              src="updatedecembermoth.png"
+              src="deciii.png"
               class="card-img-top img-fluid"
-              alt="..."
+              alt="december"
             />
             <div class="card-body">
               <h5 class="card-title joly-text">December</h5>
