--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
           <div class="card border border-white border border-5">
             <img
-              src="newjanuaryyy.jpg"
+              src="jan.png"
               class="card-img-top img-fluid"
               alt="..."
             />
@@ -158,7 +158,7 @@
               <p class="card-text ivystyle-tw">
                 Check out my January Website!.
               </p>
-              <a href="#" class="btn btn-primary">My Website</a>
+              <a href="https://super-meme-g474qr9prvg6fv7jv-5501.app.github.dev/" class="btn btn-primary">My Website</a>
             </div>
           </div>
         </div>
