--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
           <div class="card border border-white border border-5">
             <img
-              src="jan.png"
+              src="newjan.png"
               class="card-img-top img-fluid"
               alt="..."
             />
