--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 p-3 m-2">
           <div class="card border border-white border border-5">
-            <img src="february.jpg" class="card-img-top img-fluid" alt="..." />
+            <img src="IMG_1888.HEIC" class="card-img-top img-fluid" alt="..." />
             <div class="card-body">
               <h5 class="card-title joly-text">February</h5>
               <p class="card-text ivystyle-tw">
                 Check out my February Website!
               </p>
-              <a href="#" class="btn btn-primary">My Website</a>
+              <a href="https://baileyadler.github.io/presidentweb/" class="btn btn-primary">My Website</a>
             </div>
           </div>
         </div>
